--- a/pom.xml
+++ b/pom.xml
@@ -10,39 +10,14 @@
         <version>2.7.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-
-    <groupId>studio.thinkground</groupId>
-    <artifactId>AroundHub</artifactId>
+    <artifactId>Donghun</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
 
-    <name>AroundHub_SpringBoot</name>
-    <url>https://thinkground.studio</url>
-    <description>Spring Boot Project for Education</description>
-
-    <organization>
-        <name>Around Hub Studio</name>
-        <url>https://www.youtube.com/channel/UCO7p2fGIfwVbvk_d6sdfnDw</url>
-    </organization>
 
     <developers>
         <developer>
-            <id>Flature</id>
-            <name>Flature</name>
-            <email>thinkground.flature@gmail.com</email>
-            <url>https://thinkground.studio</url>
-            <organization>ThinkGround, Around Hub Studio</organization>
-            <organizationUrl>https://www.youtube.com/channel/UCO7p2fGIfwVbvk_d6sdfnDw</organizationUrl>
-            <roles>
-                <role>architect</role>
-                <role>developer</role>
-            </roles>
             <timezone>South Korea/Seoul</timezone>
-            <properties>
-                <picUrl>
-                    https://i0.wp.com/thinkground.studio/wp-content/uploads/2019/05/190514_Flature-Picture.png
-                </picUrl>
-            </properties>
         </developer>
     </developers>
 
@@ -110,12 +85,6 @@
             <artifactId>jasypt-spring-boot-starter</artifactId>
             <version>3.0.4</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
