--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.profiles.active=dev
 ## Maria DB \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC124\uC815
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/test
-spring.datasource.username=root
-spring.datasource.password=1111
+spring.datasource.username=ENC(qS0X3pWRpHgdBPW3DuxH0w==)
+spring.datasource.password=ENC(c7FkSciC/WSxjVKL1N961A==)
 ## JPA \uC124\uC815
 # create : SessionFactory\uAC00 \uC62C\uB77C\uAC08 \uB54C \uD14C\uC774\uBE14\uC744 \uC9C0\uC6B0\uACE0 \uC0C8\uB85C \uB9CC\uB4EC. (sql\uBB38\uC744 \uBCC4\uB3C4\uB85C \uB9CC\uB4E4\uC5B4\uC11C \uB370\uC774\uD130\uB97C \uB123\uB294 \uC6A9\uB3C4\uB85C\uB3C4 \uC0AC\uC6A9\uAC00\uB2A5\uD558\uB2E4.)
 # create-drop : create\uC640 \uB3D9\uC77C\uD558\uC9C0\uB9CC, SessionFactory\uAC00 \uB0B4\uB824\uAC00\uBA74 \uD574\uB2F9 \uD14C\uC774\uBE14\uC744 drop\uC2DC\uD0A8\uB2E4.
@@ -20,5 +20,5 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-short.url.id=BmUjnpre0oZj3AxObC0g
-short.url.secret=xS0KLqyLQG
+short.url.id=ENC(RGg9mHeB5LlqxOFRyrqs90gyasFxPzGmex+JR8+FUAQ=)
+short.url.secret=ENC(w49eHnltZU0z+d+hdJR5wyNYrADHE902)
