--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 short.url.id=ENC(RGg9mHeB5LlqxOFRyrqs90gyasFxPzGmex+JR8+FUAQ=)
 short.url.secret=ENC(w49eHnltZU0z+d+hdJR5wyNYrADHE902)
+
+spring.redis.host=localhost
+spring.redis.port=6379
